# dendrite-wm

./: CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
src/: input.rs  main.rs  render.rs  state.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/layout/: action.rs  dendrite_tree.rs  mod.rs
